syntax = "proto3";

package sum;

option java_package = "com.sum.service";

option java_multiple_files = true;


message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberRequest {
    int32 number = 1;
}

message PrimeNumberResponse {
    int32 primeNumber = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double average = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service SumService {
    rpc Sum (SumRequest) returns (SumResponse) {
    };
    rpc PrimeNumber (PrimeNumberRequest) returns (stream PrimeNumberResponse) {
    };

    rpc ComputeAverage (stream AverageRequest) returns (AverageResponse) {
    };

    // error handling
    // this RPC will throw an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {
    };
}